# selenium-practice

./: .gitignore  Dockerfile.test  GRID_SETUP.md  README.md  compose.yml  diagnose-grid.sh  grid-monitor.sh  pyproject.toml  pytest.ini  requirements-test.txt  run-grid-tests.sh  run-load-test.sh  run-simple-test.sh  run-tests.sh
sample-app/: Dockerfile  README.md  app.py  config.py  requirements.txt  run.py
sample-app/templates/: base.html  home.html  login.html  mypage.html  register.html
tests/: conftest.py  create_test_image.py  performance_analyzer.py  performance_demo.py  test_chrome_app.py  test_firefox_simple.py  test_parallel_grid.py  test_photo_app.py  test_time_tracker_usage.py  time_tracker.py
